Apache CouchDB CHANGES
======================

# Version 1.4.0
# -------------
#
# This version has not been released yet.
#
# HTTP Interface:
#
#  * Fixed bug with CORS and replication (COUCHDB-1689).
#
# Test Suite:
#
#  * Split up replicator_db tests into multiple independent tests.
#
# Futon:
#
#  * Disabled the link to the Futon test suite.

Version 1.3.0
-------------

Source Repository:

 * The source repository was migrated from SVN to Git.

HTTP Interface:

 * No longer rewrites the X-CouchDB-Requested-Path during recursive
   calls to the rewriter.
 * Limit recursion depth in the URL rewriter. Defaults to a maximum
   of 100 invocations but is configurable.
 * Fix _session for IE7.
 * Added Server-Sent Events protocol to db changes API.
   See http://www.w3.org/TR/eventsource/ for details.
 * Make password hashing synchronous when using the /_config/admins API.
 * Include user name in show/list ETags.
 * Experimental support for Cross-Origin Resource Sharing (CORS).
   See http://www.w3.org/TR/cors/ for details.

Replicator:

 * The replicator will use a new server-wide UUID in checkpoint ids to
 * improve the chances of an efficient resume.

Storage System:

 * Fixed unnecessary conflict when deleting and creating a
   document in the same batch.

View Server:

 * Additional response headers may be varied prior to send().
 * GetRow() is now side-effect free.

Futon:

 * Added view request duration to Futon.
 * Disable buttons for actions that the user doesn't have permissions to.

Security:

 * Passwords are now hashed using the PBKDF2 algorithm with a
   configurable work factor.

Test Suite:

 * Moved the JS test suite to the CLI
 * Improved tracebacks printed by the JS CLI tests
 * Improved the reliability of a number of tests

UUID Algorithms:

 * Added the utc_id algorithm.

URL Rewriter & Vhosts:

 * Database name is encoded during rewriting (allowing embedded /'s, etc)
 * Reset rewrite counter on new request, avoiding unnecessary request